<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:focusable="auto"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/search_movie_dialog_title"
                    android:textColor="@color/dialogTitleColor"
                    android:textSize="18dp" />

                <ImageButton
                    android:id="@+id/ibtnDialogClose"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/dialog_close_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/search_movie_dialog_movie_year"
                    android:textColor="@color/dialogTitleColor"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/etxtYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/search_movie_dialog_year_placeholder"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="2dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/search_movie_dialog_movie_include_adult"
                    android:textColor="@color/dialogTitleColor"
                    android:textSize="16dp" />

                <Switch
                    android:id="@+id/switchAdult"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Switch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/search_movie_dialog_movie_lang"
                    android:textColor="@color/dialogTitleColor"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/spinnerLang"
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/language"
                    android:paddingRight="30dp"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/btnConfigDialogConnect"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/dialog_button_bg"
                android:text="@string/search_movie_dialog_search_btn"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>